syntax = "proto3";

option csharp_namespace = "GroupServiceGrpc";

package group;

// Service Definition
service GroupService {
    rpc CheckGroupExists (CheckGroupRequest) returns (CheckGroupResponse);
    rpc CheckUserInGroup (CheckUserInGroupRequest) returns (CheckUserInGroupResponse);
    rpc GetGroupDetails (GetGroupDetailsRequest) returns (GetGroupDetailsResponse);
    rpc CheckUserInGroupOrPublic (CheckUserInGroupRequest) returns (CheckUserInGroupResponse);
}

// Messages
message CheckGroupRequest {
    string group_id = 1;
}

message CheckGroupResponse {
    bool exists = 1;
}

message CheckUserInGroupRequest {
    string group_id = 1;
    string user_id = 2;
}

message CheckUserInGroupResponse {
    bool is_member = 1; // Indicates if the user is a member of the group
    bool has_access = 2; // Indicates if the user has access (public or member)
}

message GetGroupDetailsRequest {
    string group_id = 1;
}

message GetGroupDetailsResponse {
    string group_id = 1;
    int32 visibility = 2; // 0: Public, 1: Private
}
